# formula-rs

./: Cargo.toml
src/: lib.rs
src/calc/: calc.pest  calc.rs  expressions.rs  function.rs  mod.rs  value.rs
tests/: calc.rs
tests/data/: sit2.json
