[package]
edition = "2021"
name = "formula"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pest = "2.1"
pest_derive = "2.1"
# serde = {version = "1.0", features = ["derive"]}
# serde_json = "1.0"
